# automata

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  DESIGN.md  DESIGN_V2.md  HARDWARE.md  README.md  SYNTAX.md  TODO.md
.claude/: settings.json
cmake/: CompilerWarnings.cmake  StaticAnalyzers.cmake
examples/: concat.cpp  phase.cpp  polyrhythm.cpp  son_clave.cpp  stretch.cpp  subtraction.cpp  tresillo.cpp  xor_grids.cpp
include/: biquad.hpp  clock.hpp  delay.hpp  dynamics.hpp  envelope.hpp  euclid.hpp  filter.hpp  graph.hpp  io.hpp  math.hpp  note_number.hpp  ops.hpp  pattern.hpp  random.hpp  rhythm.hpp  samplerate.hpp  sequential_signal.hpp  signal.hpp  signal_legacy.hpp  stream.hpp  tempo.hpp  units.hpp
include/v2/: clock.hpp  feedback.hpp  node.hpp  osc.hpp  pattern.hpp
src/: automata_render.cpp  compiler.hpp  graph.cpp  harness_template.hpp  image.hpp  main.cpp  ppm.hpp  renderer.hpp  signal.cpp
test/: CMakeLists.txt  graph.test.cpp  math.test.cpp  param.test.cpp  rhythm.test.cpp  signal.test.cpp  signal_legacy.test.cpp
